crates/daemon/tests/snapshots/cli_help__cli_help_semantic_status.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show semantic status

Usage: mxr semantic status

Options:
  -h, --help  Print help
