crates/daemon/tests/snapshots/cli_help__cli_help_send.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 13
expression: stdout
---
Send a draft by ID

Usage: mxr send [OPTIONS] <DRAFT_ID>

Arguments:
  <DRAFT_ID>  Draft ID to send

Options:
      --dry-run    Show what would be sent (sender, recipients, subject, byte count) without sending
      --at <TIME>  Schedule the draft to be sent later instead of sending now. Same forms as `mxr snooze --until`: `in 2h`, `tomorrow 9am`, `monday 17:00`, RFC3339. Use `mxr unsend <draft-id>` to cancel
  -h, --help       Print help
