crates/daemon/tests/snapshots/cli_help__cli_help_send_time.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 14
expression: stdout
---
Show the recipient's typical reply-time bucket

Usage: mxr send-time [OPTIONS] <RECIPIENT>

Arguments:
  <RECIPIENT>

Options:
      --account <ACCOUNT>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
