crates/daemon/tests/snapshots/cli_help__cli_help_senders.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
List top inbound senders by message volume.

`--since` restricts the count window to recent messages so the ranking reflects *current* noise, not all-time history. Accepts shorthand durations like `7d` / `4w` / `12h`, or an RFC-3339 timestamp (`2026-02-01T00:00:00Z`).

Usage: mxr senders [OPTIONS]

Options:
      --top <TOP>
          [default: 20]

      --account <ACCOUNT>


      --since <SINCE>
          Only count messages received within this window. Defaults to unbounded (all-time)

      --format <FORMAT>
          [possible values: table, json, jsonl, csv, ids]

  -h, --help
          Print help (see a summary with '-h')
