crates/daemon/tests/snapshots/cli_help__cli_help_setup.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 13
expression: stdout
---
First-run setup. Without flags, prints quick-start guidance for configuring a Gmail or IMAP account. With `--demo`, configures an in-memory fake-provider account so you can try the TUI/CLI without touching any real mail credentials

Usage: mxr setup [OPTIONS]

Options:
      --demo       Drop a fake-provider account into your config so you can poke around without real mail. The daemon's existing FakeProvider seeds synthetic messages on first sync
      --key <KEY>  Account key to use when writing the demo entry. Defaults to `demo`. Used to namespace the entry — handy if you want to keep a real account configured alongside [default: demo]
      --force      Skip the safety check that refuses to overwrite an existing account with the same key
  -h, --help       Print help
