crates/daemon/tests/snapshots/cli_help__cli_help_snippets.snap
---
source: crates/daemon/tests/cli_help.rs
assertion_line: 13
expression: stdout
---
Manage compose snippets (`;name` expansions)

Usage: mxr snippets [OPTIONS] [COMMAND]

Commands:
  list    List all snippets (default if no subcommand)
  set     Create or update a snippet inline
  remove  Delete a snippet by name
  help    Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
