crates/daemon/tests/snapshots/cli_help__cli_help_snippets_list.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
List all snippets (default if no subcommand)

Usage: mxr snippets list

Options:
  -h, --help  Print help
