crates/daemon/tests/snapshots/cli_help__cli_help_snippets_remove.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Delete a snippet by name

Usage: mxr snippets remove <NAME>

Arguments:
  <NAME>

Options:
  -h, --help  Print help
