crates/daemon/tests/snapshots/cli_help__cli_help_snippets_set.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Create or update a snippet inline

Usage: mxr snippets set [OPTIONS] <NAME> <BODY>

Arguments:
  <NAME>  Short keyword (no spaces). Used after `;` in compose
  <BODY>  Snippet body. Use `{var_name}` for placeholders

Options:
      --vars <VARS>  Comma-separated list of declared `{var}` placeholders
  -h, --help         Print help
