crates/daemon/tests/snapshots/cli_help__cli_help_snooze.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Snooze a message until a specified time

Usage: mxr snooze [OPTIONS] --until <UNTIL> [MESSAGE_ID]...

Arguments:
  [MESSAGE_ID]...

Options:
      --until <UNTIL>      When to resurface, in local time: `tomorrow`, `tonight`, `weekend`, `fri 3`, `tue 9am`, `next week`, `3 oct`, `in 2h`, `3d`, or RFC3339 (`2026-06-01T15:00:00Z`). Preview with `mxr time`
      --search <SEARCH>
      --account <ACCOUNT>
      --yes
      --dry-run
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
